🔨 BUG / Align center front page elements bug fixed

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 1px solid black;
 }
 
 h1,
@@ -50,10 +49,15 @@ body {
     border: 1px solid red;
 }
 
+.hero__greet {
+    font-size: 4rem;
+}
+
 .hero__title {
     font-size: 3rem;
     margin-bottom: 3rem;
-    margin-top: 3rem;
+    margin-top: 2rem;
+    font-weight: 300;
 }
 
 .content {
@@ -244,6 +248,10 @@ body {
     .hero__contact {
         padding: 0.7rem 2.5rem;
         display: inline;
+    }
+
+    .hero__picture {
+        margin-top: 0;
     }
 
     .languages__container {
